--- a/frontend/nest-client/src/app/components/user-card/user-card.component.html
+++ b/frontend/nest-client/src/app/components/user-card/user-card.component.html
@@ -1,3 +1,5 @@
-<div class="card flex justify-content-center">
-    <p-button label="Check" icon="pi pi-check"></p-button>
-</div>
+<p-card header="Simple Card">
+    <p class="m-0">
+        Lorem ipsum dolor sit amet...
+    </p>
+</p-card>
