passing a list of users via the user list component. cleaned up misc code and added signal input to pass entire user

--- a/frontend/nest-client/src/app/components/user-card/user-card.component.html
+++ b/frontend/nest-client/src/app/components/user-card/user-card.component.html
@@ -1,5 +1,14 @@
-<p-card header="Simple Card">
+<p-card header="User">
     <p class="m-0">
-        Lorem ipsum dolor sit amet...
+        Id: {{this.user()?.id}}
+    </p>
+    <p class="m-0">
+        Name: {{this.user()?.name}}
+    </p>
+    <p class="m-0">
+        Email: {{this.user()?.email}}
+    </p>
+    <p class="m-0">
+        Role: {{this.user()?.role}}
     </p>
 </p-card>
